spade-tests/src/snapshots/spade_tests__ast_lowering__inverting_non_port_type.snap
---
source: spade-tests/src/ast_lowering.rs
---
entity x(t: ~int<8>) -> int<8> __builtin__

error: A non-port type can not be inverted
  ┌─ testinput:1:13
  │
1 │ entity x(t: ~int<8>) -> int<8> __builtin__
  │             ^^^^^^^
  │             ││
  │             │This is not a port
  │             Inverting non-port


